# DatapoliticsAntonTest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: local_types.py  main.py
ingestion_app/: data_vectorisation.py  main.py
