[project]
name = "datapolitics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "sentence-transformers>=5.6.0",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]
